--- a/src/login/loginItem.css
+++ b/src/login/loginItem.css
@@ -1,18 +1,23 @@
-.container{
+.container {
     display: flex;
     justify-content: center;
 }
-.Login{
+.Login {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     width: 580px;
     height: 541px;
     border-radius: 20px;
     background: white;
 }
-.lable{
-font-size: 16px;
-font-weight: 700;
-
+.lable {
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 10px;
 }
+
 .login__text{
     font-size: 30px;
     font-weight: 700;
@@ -36,11 +41,6 @@ input{
     outline:none;
     padding:5px 5px;
 }
-.form__row{
-    display: flex;
-    margin-left: 112px;
-
-}
 .newUser{
     margin-bottom: 46px;
 }
@@ -50,4 +50,14 @@ input{
     font-weight: 400;
     text-align: right;
     margin-bottom: 46px;
+}
+.yellow__word{
+    color: #FDBF5A;
+    margin-left: 5px;
+}
+.input__block{
+    display: flex;
+    flex-direction: column;
+    border-bottom: 2px solid #E4E4E4;
+    margin-bottom: 30px;
 }
